fix: bizantine behavior with virtual threads